--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -8,6 +8,7 @@
 }
 
 .inner {
+  padding: 0 var(--default-layout-horizontal-spacer);
   height: 100%;
   width: var(--default-layout-width);
   max-width: 1150px;
@@ -97,10 +98,32 @@
     background-color: rgba(22, 25, 35, 0.06);
   }
 }
+.actions {
+  display: flex;
+  align-items: center;
+}
 
 .more-btn {
   padding: 5px;
   font-size: 2rem;
   margin-left: 20px;
   background-color: transparent;
+  cursor: pointer;
+}
+
+.action-btn {
+  color: #161823;
+  background-color: transparent;
+  padding: 4px 12px;
+  font-size: 2.2rem;
+  cursor: pointer;
+}
+
+.user-avatar {
+  margin-left: 8px;
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+  object-fit: cover;
+  border-radius: 50%;
 }
