--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -16,7 +16,29 @@
   padding: 11px 16px;
   border-radius: 0;
   justify-content: flex-start;
+  font-weight: 600;
   &:hover {
     background-color: rgba(22, 24, 35, 0.03);
   }
+  &.separate {
+    border-top: 1px solid rgba(22, 24, 35, 0.12);
+  }
+}
+
+.header {
+  position: relative;
+  height: 50px;
+  margin-top: -8px;
+}
+.back-btn {
+  width: 50px;
+  height: 100%;
+  cursor: pointer;
+  background-color: transparent;
+}
+.header-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
